21-GKE-Gateway-API/02-GKE-LB-Gateway-API-StaticIP/p2-regional-k8sresources-yaml/03-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  addresses:
  - type: NamedAddress # we can also use the IP adress instead of the name adress
    value: my-regional-ip1 # the name of the static IP adress created 

## Documentation Links ##
# Gateway Address
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.GatewayAddress    

# Gateway Address Type
# https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.AddressType
